Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18494

Gradients demand a specific stop order to work

    XMLWordPrintable

Details

    • 8cbd68b29224eed19f6ca6ec8186766c69a35c83

    Description

      This is a QtQuick 2 issue. If you list a gradient with stops in order going 0.0 to 1.0 all if fine. But the following code fails. Used to be fine for 1.1.

      gradient: Gradient {
                          GradientStop { position: 1.0; color: "#FF000000" }
                          GradientStop { position: 0.0; color: "#00000000" }
                      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            designker Nigel Hietala
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes